[package]
name = "quick-view"
version = "0.0.2"
description = "Json Quick View App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [
    'tray-icon',
] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-store = "2.0.0-beta.6"
tokio = "1.37.0"
regex = "1.10.4"
anyhow = "1.0.83"
tauri-plugin-http = "2.0.0-beta.7"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-beta"
